# keyboard-usage-tracker

./: Cargo.toml  README.md  app.rc  build.rs  dashboard.html  dashboard_base.html
.github/workflows/: release.yml
examples/: test_linux_keys.rs
plugins/: README.md  activity-breakdown.js  activity-charts.js  click-heatmap.js  finger-load.js  hold-duration.js  key-combos.js  keyboard-heatmap.js  live-touchpad.js  recent-activity.js  stats-cards.js  top-keys.js  touchpad-heatmap.js  typing-streaks.js  typo-analyzer.js  wpm-timeline.js
src/: dashboard.rs  db.rs  events.rs  hooks.rs  keymap.rs  lib.rs  main.rs  tray.rs
src/platform/: mod.rs
src/platform/linux/: input.rs  keymap.rs  mod.rs
src/platform/windows/: hooks.rs  keymap.rs  mod.rs  tray.rs
