[package]
name = "keyboard-usage-tracker"
version = "1.1.0"
edition = "2021"
description = "A zero latency background keyboard and mouse usage tracker with a realtime web dashboard"
license = "GPL-3.0"
repository = "https://github.com/AlpMeteSenel/keyboard-usage-tracker"
readme = "README.md"

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"

[dependencies]
crossbeam-channel = "0.5"
rusqlite = { version = "0.35", features = ["bundled"] }
tiny_http = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lazy_static = "1.5.0"
hashbrown = "0.16.1"
tungstenite = "0.29.0"

[target.'cfg(windows)'.dependencies.windows]
version = "0.61"
features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_UI_Input_KeyboardAndMouse", "Win32_UI_Shell", "Win32_Graphics_Gdi", "Win32_Security", "Win32_System_LibraryLoader", "Win32_System_Threading", "Win32_Storage_FileSystem", "Win32_UI_Input", "Win32_Devices_HumanInterfaceDevice"]

[target.'cfg(target_os = "linux")'.dependencies]
evdev = "0.12"
libc = "0.2"
x11 = { version = "2.21", features = ["xlib"] }
